[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/meshes/human.glb" type="PackedScene" id=1]
[ext_resource path="res://source/custom_classes/IKAnimator.gd" type="Script" id=2]

[node name="human" type="Node"]
script = ExtResource( 2 )

[node name="SpineTarget" type="Position3D" parent="."]

[node name="RightArmTarget" type="Position3D" parent="."]

[node name="LeftArmTarget" type="Position3D" parent="."]

[node name="RightLegTarget" type="Position3D" parent="."]

[node name="LeftLegTarget" type="Position3D" parent="."]

[node name="SpineIK" type="SkeletonIK" parent="."]
process_priority = 1

[node name="RightLegIK" type="SkeletonIK" parent="."]
process_priority = 1

[node name="LeftLegIK" type="SkeletonIK" parent="."]
process_priority = 1

[node name="RightArmIK" type="SkeletonIK" parent="."]
process_priority = 1

[node name="LeftArmIK" type="SkeletonIK" parent="."]
process_priority = 1

[node name="human" parent="." instance=ExtResource( 1 )]
